# awg-tray

./: Cargo.toml  README.md  flake.nix
examples/: dump_config.rs
src/: autostart.rs  config.rs  icon.rs  main.rs  tray.rs  vless.rs  vpn.rs
