[package]
name = "awg-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
ksni = { version = "0.3", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
